# token-dispenser

./: .gitignore  CHANGELOG.md  README.md  build_lambda.sh  pyproject.toml
terraform/: dynamo_db.tf  iam.tf  launchpad-token-dispenser-lambda.tf  main.tf  outputs.tf  terraform.tf.example  variables.tf
terraform/backends/: backend.tf.example
terraform/tfvars/: example.tfvars
tests/: set_env.py  test_format_iso_expiration.py  test_get_edl_token.py  test_token_dispenser_lambda.py
tests/data/: sample_token.json
token_dispenser/: configuration.py  launchpad_token.py  logging_config.py  token_dispenser_lambda.py
token_dispenser/aws/: launchpad_token.py  s3.py  secret_manager.py
token_dispenser/repository/: token_repo.py
