[tool.poetry]
name = "token-dispenser"
version = "0.1.0"
description = ""
authors = ["IandA <IandA@jpl.nasa.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.36.25"
requests = "2.32.3"
cryptography = "44.0.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
